add flat database mode
Signed-off-by: Karim TAAM <karim.t2am@gmail.com>